<resources>
    <string name="app_name">ArkCongress</string>

    <string name="main_title">Lista de eventos</string>
    <string name="create_event_title">Crear evento</string>
    <string name="myevents_title">Mis eventos</string>

    <string name="toolbar_create_event">Crear un evento</string>
    <string name="toolbar_my_events">Mis eventos</string>
    <string name="toolbar_logout">Cerrar sesión</string>

    <string name="test_text">Texto de prueba</string>
    <string name="account_already_exists">Tienes ya una cuenta registrada. Inicia sesión con otro proveedor que no sea %s</string>

    <string name="facebook_login_error">Error al iniciar sesión a través de Facebook</string>
    <string name="facebook_login_cancel">El envío de credenciales de Facebook ha sido cancelada</string>

    <string name="google_login_error">Error al iniciar sesión a través de Google</string>
    <string name="google_login_cancel">El envío de credenciales de Google ha sido cancelada</string>

    <string name="twitter_login_error">Error al iniciar sesión a través de Twitter</string>
    <string name="twitter_login_cancel">El envío de credenciales de Twitter ha sido cancelada</string>

    <!-- CREATE EVENT -->

    <string-array name="event_type_list">
        <item>Conferencia</item>
        <item>Congreso</item>
        <item>Taller</item>
        <item>Bazar</item>
        <item>Elige el tipo de evento…</item>
    </string-array>

    <string name="create_event_loading_title">Creando evento…</string>
    <string name="create_event_loading_msg">Espera a que la información se almacene</string>

    <string name="create_event_required_error">Hace falta información. Ingresa todos los datos requeridos</string>
    <string name="create_event_date_format_error">El formato de las fechas es incorrecto. Intente de nuevo</string>

    <string name="event_title">Crea tu evento</string>
    <string name="event_name">Nombre de tu evento</string>
    <string name="event_selector_prompt">Elige el tipo de evento</string>
    <string name="event_type_desc">Tipo</string>
    <string name="event_startdate">Inicia el</string>
    <string name="event_starttime">Hora</string>
    <string name="event_enddate">Termina el</string>
    <string name="event_endtime">Hora</string>
    <string name="event_location">Lugar de tu evento</string>
    <string name="event_description">Añade una descripción</string>
    <string name="event_submit">Crear</string>

    <string name="date_divider"> - </string>

    <!-- EVENT INFO -->

    <string name="event_info_date_label_start">Inicia</string>
    <string name="event_info_date_label_end">Termina</string>
    <string name="event_info_location_label">¿En dónde?</string>
    <string name="event_info_description_label">¿De qué trata?</string>

    <!-- LOADING TEXT -->

    <string name="my_event_loading_title">Cargando tus eventos…</string>
    <string name="my_event_loading_msg">Estamos cargando la lista de tus eventos</string>

    <string name="main_loading_title">Cargando la lista de eventos…</string>
    <string name="main_loading_msg">Estamos cargando la lista de eventos en activo</string>

    <!-- OTHER -->

    <string name="autocomplete_location_adapter_error">Google API no está disponible</string>
</resources>
