<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorCreateEvent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/textColorBackground"
    tools:context=".create_event.CreateEventActivity">

    <android.support.design.widget.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarContent"
        android:paddingTop="@dimen/padding_top_appbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:id="@+id/mainToolbar"
            android:background="@color/toolBarBackground"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/AppTheme.NoActionBar"
            app:popupTheme="@style/AppTheme.NoActionBar.Submenu">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollCreateEvent"
        android:isScrollContainer="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/createFormLayout"
        android:padding="@dimen/padding_event_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/create_event_sublayout_padding"
            android:id="@+id/titleLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:id="@+id/editEventName"
                    android:hint="@string/event_name"
                    android:inputType="text"
                    android:textColor="@color/textColorContent"
                    android:textSize="@dimen/create_event_input" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/create_event_sublayout_padding"
            android:id="@+id/typeLayout">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_event_spinner_padding"
                android:background="@drawable/input_text"
                android:id="@+id/listEventType"
                android:prompt="@string/event_selector_prompt"
                android:spinnerMode="dialog" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/event_type_desc"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingTop="@dimen/create_event_spinner_arrow"
                android:src="@mipmap/ic_keyboard_arrow_down_black_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/create_event_sublayout_padding"
            android:id="@+id/startDateLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelStartDate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <TextView
                    android:layout_width="@dimen/create_event_date_input"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:id="@+id/inputStartDate"
                    android:hint="@string/event_startdate"
                    android:textSize="@dimen/create_event_label" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelStartTime"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <TextView
                    android:layout_width="@dimen/create_event_date_input"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:id="@+id/inputStartTime"
                    android:hint="@string/event_starttime"
                    android:textSize="@dimen/create_event_label" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/create_event_sublayout_padding"
            android:id="@+id/endDateLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelEndDate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <TextView
                    android:layout_width="@dimen/create_event_date_input"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:id="@+id/inputEndDate"
                    android:hint="@string/event_enddate"
                    android:textSize="@dimen/create_event_label" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelEndTime"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <TextView
                    android:layout_width="@dimen/create_event_date_input"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:id="@+id/inputEndTime"
                    android:hint="@string/event_endtime"
                    android:textSize="@dimen/create_event_label" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/create_event_sublayout_padding"
            android:id="@+id/locationLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/autoCompleteHintLocation">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:id="@+id/autoCompleteLocation"
                    android:hint="@string/event_location"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/textColorContent"
                    android:textSize="@dimen/create_event_input" />
            </android.support.design.widget.TextInputLayout>

            <fragment
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_event_map_height"
                android:name="com.google.android.gms.maps.MapFragment"
                android:id="@+id/locationMap"
                android:layout_below="@+id/autoCompleteHintLocation" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/create_event_sublayout_padding"
            android:id="@+id/descriptionLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:id="@+id/inputDescription"
                    android:hint="@string/event_description"
                    android:gravity="top|start"
                    android:lines="3"
                    android:maxLines="6"
                    android:inputType="textMultiLine"
                    android:textColor="@color/textColorContent"
                    android:textSize="@dimen/create_event_input" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/create_event_sublayout_padding"
            android:id="@+id/submitButtonsLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submitCreateEvent"
                android:background="@drawable/create_submit_background"
                android:text="@string/event_submit"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_event_blank_space"
            android:layout_marginBottom="@dimen/create_event_sublayout_padding"
            android:id="@+id/blankSpaceLayout">
        </RelativeLayout>

    </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
